# fx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: CLI11.cmake  cpr.cmake  gtest.cmake
include/fx/: Currency.hpp  Formatter.hpp  Fx.hpp  FxInterface.hpp
src/: CMakeLists.txt  Currency.cpp  Formatter.cpp  Fx.cpp  FxInterface.cpp  main.cpp
tests/: CMakeLists.txt
tests/include/mock/: MockFx.hpp
tests/src/: CurrencyTest.cpp  FormatterTest.cpp  FxInterfaceTest.cpp  FxTest.cpp
